# visuo-multi-agent-etl

./: .gitignore  README.md  gemini.py  generate_schema.py  generate_source_columns.py  pyproject.toml  target.py
main/: SchemaAnalyzerAgent.py  archieve_util.py  main.py  tools.py  util.py
main/data/: all_tables.json  intitial_mapping.json  intitial_mapping_generated_3.json
main/data/generated_schema/: contracts_schema.json  customers_schema.json  hvac_detailed_schema.json  invoices_schema.json  service_requests_schema.json  technicians_schema.json
main/data/logs/: llm_calls_log.txt  llm_calls_log_generated_3.txt  llm_calls_log_run_1.txt
main/data/source_data/: contracts.csv  customers.csv  invoices.csv  plants.csv  service_requests.csv  technicians.csv
main/data/source_schema/: equipment_schema.json  maintenance_schema.json  plants_schema.json
main/data/target_schema/: generated_1.json  generated_2.json  generated_3.json  sample_target_schema.json
