[tool.poetry]
name = "visuo-etl"
version = "0.1.0"
description = ""
authors = ["Inamul Hassan <hassan.inamul@outlook.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
langchain = "^0.3.0"
langchain-core = "^0.3.5"
langchain-openai = "^0.2.0"
environs = "^11.0.0"
langchain-google-genai = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
